changed nav color

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -18,7 +18,7 @@
   --nav-link-color: #0A9396;
   --nav-background-color: #E9D8A6;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #0A9396;
+  --nav-hover-background-color: #9B2226;
 }
 
 
