--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -13,6 +13,11 @@ nav a {
     padding: 35px;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a:hover {
     background-color: white;
     color: #9B2226;
@@ -20,6 +25,12 @@ nav a:hover {
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: white;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
 .button-box {
@@ -34,6 +45,8 @@ main section {
     height: 725px;
     background-color: #E9D8A6;
     margin-bottom: 100px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -45,7 +58,9 @@ body {
 }
 
 header {
-    background-color: #CA6702;
+    background-color: rgb(202,103,2);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 .book, .join {
@@ -73,6 +88,9 @@ header {
     line-height: 1.5em;
     padding: 35px;
     margin-top: 200px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px black;
 }
 
 footer {
@@ -80,6 +98,9 @@ footer {
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -141,6 +162,8 @@ h2 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 footer .social img {
@@ -151,10 +174,100 @@ footer .social img {
     margin: 200px 0;
 }
 
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
 .card-img {
     border: 10px solid #E9D8A6;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px black;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8; 
+    box-shadow: 5px 5px 10px black;
 }
 
 main section img {
     box-sizing: border-box;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
