--- a/green-machine/styles/site-plan.css
+++ b/green-machine/styles/site-plan.css
@@ -45,7 +45,9 @@ body {
 img {
   display: block;
   margin: 0 auto;
-  width: 50%;
+}
+.photo {
+  width: 75%;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
