added to index.html

--- a/green-machine/styles/site-plan.css
+++ b/green-machine/styles/site-plan.css
@@ -45,10 +45,11 @@ body {
 img {
   display: block;
   margin: 0 auto;
-}
-.photo {
   width: 75%;
 }
+/* .photo {
+  width: 75%;
+} */
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
