--- a/green-machine/styles/site-plan.css
+++ b/green-machine/styles/site-plan.css
@@ -45,11 +45,14 @@ body {
 img {
   display: block;
   margin: 0 auto;
-  width: 75%;
 }
-/* .photo {
-  width: 75%;
-} */
+#logo {
+  width: 30%;
+}
+.photo {
+  width: 55%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
@@ -187,4 +190,8 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+
+.wireframe {
+  width: 40%;
 }
