attempted to fix issues with github

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -295,7 +295,8 @@ label {
     text-align: right;
   }
   
-input, textarea {
+input, 
+    textarea {
     /* To make sure that all text fields have the same font settings
        By default, textareas have a monospace font */
     font: 1em sans-serif;
