--- a/green-machine/styles/style.css
+++ b/green-machine/styles/style.css
@@ -1,3 +1,421 @@
+/* Affects all pages */
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&family=Lato:wght@300&family=League+Spartan:wght@100;900&family=Reenie+Beanie&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+#content {
+    max-width: 1600px;
+    width: 100%;
+    font-family: "josefin sans";
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: rgba(42,46,48,100%);
+    display: grid;
+    grid-template-columns: repeat (8, 1fr);
+}
+
+nav a {
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    padding: 35px;
+    font-variant:small-caps;
+    font-family: lato;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    grid-column: 2/7;
+    font-size: 1.2em;
+}
+
+nav a:hover {
+    background-color: #5c8660;
+    color: white;
+}
+
+.logo-header {
+    width: 100px;
+    grid-column: 1/2;
+    margin: 5% 40%;
+}
+.logo-header:hover {
+    opacity: .7;
+    transform: scale(1.2);
+}
+.social-header {
+    display: flex;
+    justify-content: space-around;
+    grid-column: 7/8;
+    grid-row: 1/2;
+    margin: auto 40%;
+    z-index:2;
+}
+.social-header a {
+    padding: 0 20%;
+}
+.facebook:hover, .instagram:hover, .twitter:hover {
+    opacity: 0%;
+}
+.social-header-green {
+    display: flex;
+    justify-content: space-around;
+    grid-column: 7/8;
+    grid-row: 1/2;
+    margin: auto 40%;
+    z-index: 1;
+}
+.social-header-green a {
+    padding: 0 20%;
+}
+
+.button-box {
+    text-align: center;
+}
+.button-box:hover {
+    transform: scale(1.1);
+}
+.see-menu, .get-here, #contactus-footer, #site-plan-footer {
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    border-radius: 5px;
+    font-family: lato;
+}
+
+.see-menu, #contactus-footer, #site-plan-footer {
+    background-color: white;
+    color: black;
+}
+
+.get-here {
+    background-color: black;
+    color: white;
+}
+
+footer {
+    background-color: rgba(42,46,48,100%);
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr 2fr;
+    grid-template-rows: 100px 100px;
+    color: white;
+    font-family: lato;
+    padding: 30px 0 15px 0;
+}
+
+.footer-class {
+    font-size: .75em;
+}
+.footer-class a {
+    text-decoration: underline;
+    color: white;
+    font-style: italic;
+}
+.footer-class a:hover {
+    /* background-color: white; */
+    color: #BC4749;
+    font-style: bolder;
+}
+
+.social-footer, .social-footer-green {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    align-items: center;
+    text-align: center;
+
+}
+.social-footer {
+    z-index:2;
+}
+.social-footer-green {
+    z-index: 1;
+}
+.facebook:hover, .instagram:hover, .twitter:hover {
+    opacity: 0%;
+}
+
+.logo-footer{
+    width: 100px;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    margin: 3% 40% 5% 40%;
+    align-items: center;
+}
+.logo-footer:hover {
+    opacity: .7;
+    transform: scale(1.2);
+}
+
+.hours {
+    grid-column: 4/5;
+    grid-row: 1/3;
+    align-items: center;
+    text-align: center;
+    line-height: 2em;
+}
+
+.footer-logo {
+    align-items: center;
+    text-align: center;
+}
+#site-plan-footer {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin: 30px 0px 15px 0px;
+}
+#contactus-footer {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin: 0px 0px 18px 0px;
+}
+
+.footer-links a {
+    display: inline-block;
+    font-size: 50px;
+}
+.copyright {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    margin: 30px 0 0 40px;
+}
+.footer-header {
+    font-family: Lato;
+    font-variant: small-caps;
+    font-size: 1.7em;
+}
+
+#myBtn {
+    font-family: fontawesome;
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: white; /* Set a background color */
+    color: black;/* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+  
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+    color: white;
+}
+
+/* HOME PAGE */
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+#hero-img {
+    width: 100%;
+}
+.home-title {
+    font-size: 2em;
+    margin: 5% 0;
+    color: white;
+    text-align: center;
+}
+.home-title-green-machine {
+    margin: 5% 0;
+    color: white;
+    text-align: center;
+    font-size: 4em;
+    font-variant: small-caps;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    font-family: lato;
+}
+
+#story-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px 1fr 1fr;
+    /* background-color: #d5d8dd; */
+    background-image: linear-gradient(#383725,#d5d8dd,#d5d8dd,#d5d8dd,#d5d8dd,#d5d8dd);
+    padding: 50px 0 50px 0;
+    margin-top: -5px;
+    grid-gap: 0;
+    margin-bottom: -10px;
+}
+
+#img-grid1 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+#img-grid2 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+#story-grid img {
+    width: 90%;
+    margin: 0 50px;
+    border: 5px double white;
+}
+#para-grid {
+    grid-column: 2/3;
+    grid-row: 2/4;
+    padding: 15%;
+    text-align: center;
+    line-height: 2em;
+    margin-top: -80px;
+}
+#para-grid h2 {
+    font-size: 2em;
+    font-family: lato;
+    font-variant: small-caps;
+}
+#para-grid .h3 {
+    font-family: "lato";
+}
+
+#para-grid p {
+    font-family: "Reenie Beanie";
+    font-size: 1.4em;
+}
+#para-grid .small {
+    font-family: "josefin sans";
+    font-weight: bold;
+    font-size: 1em;
+}
+.find-us {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 4fr 1fr;
+    background-image: url("../images/building.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#hour-button {
+    margin: 50px;
+}
+#find-us-background {
+    background-color: white;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    padding: 6% 0% 12% 0%;
+}
+.find-us-text {
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin: 3% 0 8% 0;
+    line-height: 2em;
+}
+.find-us-text h2 {
+    font-size: 2em;
+    font-family: lato;
+    font-variant: small-caps;
+    line-height: 2em;
+}
+.find-us-text h3 {
+    font-size: 1em;
+    font-family: lato;
+    font-variant: small-caps;
+    line-height: 2em;
+}
+.find-us-text p {
+    font-family: "lato";
+    line-height: 2em;
+} 
+
+/* CONTACT US */
+form {
+    /* Center the form on the page */
+    margin: 20px auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+  }
+  
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+form li + li {
+    margin-top: 1em;
+  }
+  
+label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+input, 
+    textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #999;
+  }
+  
+input:focus, textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+  }
+  
+textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+.button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+  }
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+
 /* .paralax {
     https://www.w3schools.com/howto/howto_css_parallax.asp 
     (hero img)
