--- a/green-machine/styles/site-plan.css
+++ b/green-machine/styles/site-plan.css
@@ -4,10 +4,10 @@ Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&family=Lato:wght@300&family=League+Spartan:wght@100;900&family=Reenie+Beanie&display=swap');
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #F7FFED;
-  --secondary-color: #1A4301;
-  --accent1-color: #DDA15E;
-  --accent2-color: #BC4749;
+  --primary-color: #2A2E30;
+  --secondary-color: #5c8660;
+  --accent1-color: #c5742b;
+  --accent2-color: #f1f1f1;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Lato, Alata, "sans-serif"; 
@@ -21,17 +21,26 @@ Fonts are separated by a | */
   */
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #1A4301;  /* headlines on a white background */ 
+  --headline-color-on-white: black;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #1A4301; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #1A4301;
+  --paragraph-background-color: #5c8660;
   --nav-link-color: white;
-  --nav-background-color: #BC4749;
-  --nav-hover-link-color: #1A4301;
-  --nav-hover-background-color: #DDA15E;
+  --nav-background-color: #2A2E30;
+  --nav-hover-link-color: white;
+  --nav-hover-background-color: #5c8660;
 }
 
+#site-images {
+  display: flex;
+  flex-wrap: wrap;
+}
+#site-images img {
+  width: 20%;
+  height: auto;
+  align-self: flex-start;
+}
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
